--- a/package.json
+++ b/package.json
@@ -6,18 +6,34 @@
     "start": "next start"
   },
   "resolutions": {
-    "@polkadot/api": "^7.1.1",
-    "@polkadot/keyring": "^8.1.2",
-    "@polkadot/util": "^8.1.2",
-    "@acala-network/api": "^4.0.4-2",
-    "@acala-network/sdk": "^4.0.4-2",
-    "@acala-network/sdk-core": "^4.0.4-2"
+    "@polkadot/api": "^7.15.2-14",
+    "@polkadot/api-augment": "^7.15.2-14",
+    "@polkadot/api-base": "^7.15.2-14",
+    "@polkadot/api-contract": "^7.15.2-14",
+    "@polkadot/api-derive": "^7.15.2-14",
+    "@polkadot/hw-ledger": "^9.0.1",
+    "@polkadot/keyring": "^9.0.1",
+    "@polkadot/networks": "^9.0.1",
+    "@polkadot/phishing": "^0.11.2",
+    "@polkadot/rpc-augment": "^7.15.2-14",
+    "@polkadot/rpc-core": "^7.15.2-14",
+    "@polkadot/rpc-provider": "^7.15.2-14",
+    "@polkadot/types": "^7.15.2-14",
+    "@polkadot/types-augment": "^7.15.2-14",
+    "@polkadot/types-codec": "^7.15.2-14",
+    "@polkadot/types-create": "^7.15.2-14",
+    "@polkadot/types-known": "^7.15.2-14",
+    "@polkadot/types-support": "^7.15.2-14",
+    "@polkadot/util": "^9.0.1",
+    "@polkadot/util-crypto": "^9.0.1",
+    "@polkadot/wasm-crypto": "^6.0.1",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@acala-network/api": "^4.0.4-2",
-    "@acala-network/sdk": "^4.0.4-2",
-    "@acala-network/sdk-core": "^4.0.4-2",
-    "@acala-network/sdk-swap": "^4.0.4-2",
+    "@acala-network/api": "^4.0.4-6",
+    "@acala-network/sdk": "^4.0.4-6",
+    "@acala-network/sdk-core": "^4.0.4-6",
+    "@acala-network/sdk-swap": "^4.0.4-6",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@polkadot/api": "^7.1.1",
