--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "baseUrl": "src",
+    "paths": {
+      "@components": ["components"],
+      "@components/*": ["components/*"],
+    }
   },
   "include": [
     "next-env.d.ts",
