--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "TAILWIND_MODE=watch next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "resolutions": {
     "@polkadot/api": "^7.15.2-14",
@@ -60,9 +61,13 @@
     "@svgr/webpack": "^6.1.1",
     "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.13.0",
+    "eslint-config-next": "^12.1.4",
     "postcss": "^8.4.4",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.3"
   }
 }
