--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@polkadot/util": "^9.0.1",
     "@polkadot/util-crypto": "^9.0.1",
     "@polkadot/wasm-crypto": "^6.0.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "rxjs": "^7.5.5"
   },
   "dependencies": {
     "@acala-network/api": "^4.0.4-6",
@@ -66,6 +67,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^8.13.0",
     "eslint-config-next": "^12.1.4",
+    "eslint-plugin-react": "^7.29.4",
     "postcss": "^8.4.4",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.6.3"
