--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@svgr/webpack": "^6.1.1",
     "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.37",
+    "@types/tailwindcss": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.0",
