--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@polkadot/util-crypto": "^9.0.1",
     "@polkadot/wasm-crypto": "^6.0.1",
     "typescript": "^4.6.3",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "dependencies": {
     "@acala-network/api": "^4.1.2-0",
@@ -51,8 +53,8 @@
     "d3": "^7.2.0",
     "lodash": "^4.17.21",
     "next": "^12.0.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "latest",
+    "react-dom": "latest",
     "react-redux": "^7.2.6",
     "react-table": "^7.7.0",
     "redux": "^4.1.2",
