--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-filter": "^0.0.20",
+    "rxjs": "^7.5.5",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
