--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/yup": "^0.29.13",
     "clsx": "^1.1.1",
     "d3": "^7.2.0",
+    "dayjs": "^1.11.1",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "react": "^17.0.1",
