--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "react-dom": "latest"
   },
   "dependencies": {
-    "@acala-network/api": "^4.1.2-27",
-    "@acala-network/sdk": "^4.1.2-27",
-    "@acala-network/sdk-core": "^4.1.2-27",
-    "@acala-network/sdk-swap": "^4.1.2-27",
+    "@acala-network/api": "^4.1.3",
+    "@acala-network/sdk": "^4.1.3",
+    "@acala-network/sdk-core": "^4.1.3",
+    "@acala-network/sdk-swap": "^4.1.3",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@polkadot/api": "^7.1.1",
